k3/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting
  namespace: accounting
  labels:
    app: accounting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounting
  template:
    metadata:
      labels:
        app: accounting
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - jackie
      containers:
      - name: accounting
        image: docker.io/oktobrfest/zash:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
