k3/04-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting-db
  namespace: accounting
  labels:
    app: accounting-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounting-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: accounting-db
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - jackie
      containers:
      - name: mysql
        image: mysql:5.7
        args:
          - "--ignore-db-dir=lost+found"
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
          - name: db-data
            mountPath: /var/lib/mysql
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: accounting-db-data
